--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						</tr>
 						<tr>
 							<td class="principal">
-								<img src="Photo.jpeg" class="mifoto">
+								<img src="pushpin.png" class="mifoto">
 							</td>
 							<td class="principal">
 								<h2>
