--- a/index.html
+++ b/index.html
@@ -125,12 +125,10 @@
 								PROFILE
 								</p>	   
 								<p id="inf">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
-								dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-								Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-								mollit anim id est laborum.	
+									Computer engineering student active at the University of Girona with years of 
+									experience in administration and paperwork in an office. Three languages spoken 
+									as well as a great creativity and organization. With great interest in continuing 
+									to learn and improve as much as possible.	
 								</p>
 							</td>  
 						</tr>
